<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieEditFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:labelFor="@id/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/title" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="textCapWords"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:labelFor="@id/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/description" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="textCapSentences"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/cast" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/add_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            app:srcCompat="@drawable/ic_add_green_24dp" />

    </LinearLayout>

    <fragment
        android:id="@+id/cast_list"
        android:name="com.javadude.moviesnav.MovieEditRoleInfoListFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>